--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -834,27 +834,32 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
 /* --- Tables --- */
 
 table {
+  table-layout: auto;
+  width: 100%;
   padding: 0;
 }
 table tr {
   border-top: 1px solid #cccccc;
   background-color: #ffffff;
+  height: 3.2rem;
   margin: 0;
   padding: 0;
 }
-table tr:nth-child(2n) {
-  background-color: #f8f8f8;
-}
-table tr th {
+table tr th, table thead tr th {
+  word-break: keep-all;
+  font-size: 0.9rem;
   font-weight: bold;
+  background-color: #f8f8f8;
   border: 1px solid #cccccc;
-  text-align: left;
+  text-align: center;
   margin: 0;
   padding: 0.375rem 0.8125rem;
 }
-table tr td {
+table tr td, table tbody tr td {
+  word-break: keep-all;
+  font-size: 0.8rem;
   border: 1px solid #cccccc;
-  text-align: left;
+  text-align: center;
   margin: 0;
   padding: 0.375rem 0.8125rem;
 }
