--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -131,7 +131,7 @@ img {
 
 .navbar-custom {
   background-color: {{ site.navbar-col | default: "#EAEAEA" }};
-  border-bottom: 1px solid {{ site.navbar-border-col | default: "#0066C0" }};
+  border-bottom: 2px solid {{ site.navbar-border-col | default: "#0066C0" }};
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   {% if site.navbar-img %}
     background-image: url({{ site.navbar-img | relative_url }});
@@ -150,10 +150,10 @@ img {
 }
 
 .navbar-custom .navbar-brand {
-  line-height: 1.5;
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-  font-size: 2rem; 
+  line-height: 3;
+  padding-top: 0.425rem;
+  padding-bottom: 0.425rem;
+  font-size: 1rem;
   /* 폰트 크기 변경(제목) */
 }
 
@@ -184,9 +184,10 @@ img {
 
 .navbar-custom .navbar-nav .nav-item {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-family: 'Noto Sans','맑은 고딕','Malgun Gothic',Arial,Helvetica,sans-serif,Lucida,'Grande','Microsoft YaHei','Hiragino Sans GB', 'SimSun', 'Meiryo';;
   /* 폰트사이즈 아이템 */
-  letter-spacing: 0.0625rem;
+  letter-spacing: 0.0825rem;
 }
 
 .navbar-custom .navbar-nav .nav-link {
@@ -199,7 +200,7 @@ img {
 
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-nav .nav-link {
-  font-weight: 800;
+  font-weight: 600;
   /* 폰트 굵기 */
   color: {{ site.navbar-text-col | default: "#404040" }};
 }
@@ -259,7 +260,7 @@ img {
 
 .navbar-custom .nav-item.dropdown .dropdown-menu {
   margin-top: 0;
-  font-size: 0.7em;
+  font-size: 0.625rem;
   border: 0;
   padding: 0;
   {% if site.navbar-var-length %}
