--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,10 @@
 <footer>
   <div class="container-md beautiful-jekyll-footer">
-    <div class="row">
-      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
-      {% include social-networks-links.html %}
-      {% if page.footer-extra %}
-        <div class="footer-custom-content">
-          {% for file in page.footer-extra %}
-            {% include {{ file }} %}
-          {% endfor %}
-        </div>
-      {% endif %}
-      <p class="copyright text-muted">
-      {% if site.author %}
-        {{ site.author }}
-        &nbsp;&bull;&nbsp;
-      {% endif %}
-      {{ site.time | date: '%Y' }}
-      </p>
-      {% unless site.remove-ads %}<p class="theme-by text-muted">
-        Powered by
-        <a href="https://geoai.modoo.at">지오에이아이데이터학회</a>
-      </p>{% endunless %}
-      </div>
+    <div>
+        <img src="assets/img/logo_text.png" width=30% align="middle">
+        <p style="font-size= 16px; color: white;"><br> &bull; 주소: 서울특별시 동대문구 서울시립대로163 전농관 110호 &emsp;&emsp;&bull; Tel: 02-6490-5682</p>
+        <a style="font-size= 16px; color: white;">&bull; E-mail: geoaidata@gmail.com &emsp;&emsp;&bull; 학회 공식사이트: </a>
+        <a style="font-size= 16px;" href="https://geoai.modoo.at">https://geoai.modoo.at</a>
     </div>
   </div>
 </footer>
