--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
   <div class="container-md">
     <p class="logo-text">
       <img src="../assets/img/logo_text.png" alt="logo" />
-      <span>지오에이아이데이터학회</span>
+      <span style="color: white">지오에이아이데이터학회</span>
     </p>
     <p class="copyright">
-      <span>&bull; 주소: 서울특별시 동대문구 서울시립대로163 전농관 110호</span
-      ><span>&bull; Tel: 02-6490-5682</span>
+      <span style="color: white">&bull; 주소: 서울특별시 동대문구 서울시립대로163 전농관 110호</span
+      ><span style="color: white">&bull; Tel: 02-6490-5682</span>
     </p>
     <p class="copyright">
-      <span>&bull; E-mail: geoaidata@gmail.com </span>
+      <span style="color: white">&bull; E-mail: geoaidata@gmail.com </span>
       <span
-        >&bull; 학회 공식사이트:
-        <a href="https://geoai.modoo.at">https://geoai.modoo.at</a></span
+      style="color: white" >&bull; 학회 공식사이트:
+        <a style="color: gray" href="https://geoai.modoo.at">https://geoai.modoo.at</a></span
       >
     </p>
   </div>
