--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <span style="color: white">&bull; E-mail: geoaidata@gmail.com </span>
       <span
       style="color: white" >&bull; 학회 공식사이트:
-        <a style="color: gray" href="https://geoai.modoo.at">https://geoai.modoo.at</a></span
+        <a style="color: gray" href="https://gaidas.org">https://gaidas.org</a></span
       >
     </p>
   </div>
