--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,13 @@
 ---
 layout: base
 ---
+<style>
+  .gaybar-header-margin {
+    height: 3.5rem;
+  }
+</style>
 
-<div class="intro-header"></div>
+<div class="gaybar-header-margin"></div>
 
 <div role="main" class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   {% if page.before-content %}
