--- a/assets/css/gaybar.css
+++ b/assets/css/gaybar.css
@@ -1,5 +1,6 @@
 .gaybar__container {
-  display: block;
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   padding-bottom: 0.5rem;
   text-align: center;
@@ -7,13 +8,32 @@
 }
 
 .gaybar__container ul {
+  display: flex;
   padding:0;
   margin: 0;
+  overflow-x: scroll;
+  overflow: auto;
+}
+
+@media (min-width:763px) {
+  .gaybar__container ul {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  .gaybar__container ul li {
+    display: block;
+  }
 }
 
 .gaybar__container ul li {
-  display: inline-block;
-  line-height: 48px
+  display: flex;
+  align-items: center;
+  width: max-content;
+  line-height: 48px;
+}
+
+.gaybar__container ul li a {
+  white-space: nowrap;
 }
 
 .gaybar__container ul li+li:before {
@@ -94,4 +114,25 @@
     width: 1rem;
     height: 1rem;
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
